~ changed popup order on startup [WiZaRd]
+ added version check to tools [WiZaRd]
~ improved passive source finding [WiZaRd]
+ added trickle slot orientation slot opening [WiZaRd]
! fixed possible crash in first start assistent - thx Nuberu [WiZaRd]
+ added FDC by BlueSonicBoy [WiZaRd]
~ removed icons from options dialog [WiZaRd]
! don't send empty directories [WiZaRd]
+ you can now adjust the sharing mode for each directory individually [WiZaRd]
+ added column for fake info to searchlistctrl [WiZaRd]
! fixed stats bug - thx to jerrybg [WiZaRd]
+ ratio indicator smilies in sharedfiles list [WiZaRd]
+ ratio indicator smiliey added to preferences [WiZaRd] 
 * help them looking friendly by sharing your stuff :)
+ mediainfo.dll autoupdate [WiZaRd]
~ splash is now shown way earlier to compensate for ipfilter loading times [WiZaRd]
+ added restart confirmation popup [WiZaRd]
! (mis)placement/size of the lower panes in the transfers window by jerrybg [WiZaRd]
+ ColorPreviewReadyFiles [WiZaRd, idea by jerrybg]
 * PreviewReadyColor=0xABCDEF 
+ chat logging [WiZaRd, idea by CiccioBastardo]
+ advanced transfer window layout by Stulle [WiZaRd]
+ re-added option to enable default progress bar style via pref.ini [WiZaRd]
 * UseSimpleProgress=0/1
+ diskspace checks now require min(1GB, max(10MB, 5% of HDD)) [WiZaRd]
~ reduced CPU usage for Kad parts [WiZaRd, original by netfinity]

2012XXXX:
> updated libpng to v1.5.12
> updated miniupnplib support to v1.7 (30/08/2012)
> update resizeablelib to v1.4 alpha
~ removed more (now obsolete) server stat code
+ USS Status Pane [WiZaRd, by Eulero]
 * http://forum.emule-project.net/index.php?showtopic=150006
~ improved compatibility of kMule when run under WINE [WiZaRd]
~ new connection state icons [WiZaRd]
+ the hidden pref entry "SpamFilterMode" can now be used to configure the spam filter feature [WiZaRd]
 * 0 = disabled, 1 = colored, 2 = autosort, 3 = filtered (not implemented, yet)
+ Startup Flood Prevention [WiZaRd]
+ autoHL [WiZaRd]